# cocos2d-x-lite

./: CMakeLists.txt  JenkinsFileMac  JenkinsfileMac  download-deps.py
cocos/2d/: CCRenderTexture.h
cocos/audio/android/: AudioEngine-inl.cpp
cocos/bindings/manual/: JavaScriptJavaBridge.cpp  jsb_global.cpp
cocos/editor-support/: MiddlewareMacro.h
cocos/network/: Downloader-android.cpp  HttpClient-android.cpp
cocos/platform/android/: CanvasRenderingContext2D-android.cpp  Device-android.cpp  FileUtils-android.cpp  View.cpp  View.h
cocos/platform/android/java/src/com/cocos/lib/: CanvasRenderingContext2DImpl.java  Cocos2dxActivity.java  Cocos2dxDownloader.java  Cocos2dxEditBoxActivity.java  Cocos2dxHandler.java  Cocos2dxHelper.java  Cocos2dxHttpURLConnection.java  Cocos2dxJavascriptJavaBridge.java  Cocos2dxLocalStorage.java  Cocos2dxReflectionHelper.java  Cocos2dxVideoHelper.java  Cocos2dxVideoView.java  Cocos2dxWebView.java  Cocos2dxWebViewHelper.java  CocosActivity.java  CocosKeyCodeHandler.java  CocosOrientationHelper.java  CocosSurfaceView.java  CocosTouchHandler.java  Utils.java
cocos/platform/android/java/src/org/cocos2dx/lib/: Cocos2dxActivity.java  Cocos2dxHelper.java  CocosActivity.java  CocosKeyCodeHandler.java  CocosTouchHandler.java
cocos/platform/android/jni/: JniCocosActivity.cpp  JniCocosTouchHandler.cpp  JniImp.cpp
cocos/scripting/js-bindings/jswrapper/: config.cpp
cocos/scripting/js-bindings/jswrapper/v8/: ScriptEngine.cpp
cocos/scripting/js-bindings/manual/: jsb_module_register.cpp
cocos/storage/local-storage/: LocalStorage-android.cpp
cocos/ui/edit-box/: EditBox-android.cpp
cocos/ui/videoplayer/: VideoPlayer-android.cpp
cocos/ui/webview/: WebViewImpl-android.cpp
templates/: cocos-project-template.json  cocos2dx_files.json
templates/android/template/: CMakeLists.txt
templates/android/template/app/: build.gradle
templates/android/template/instantapp/: build.gradle
templates/js-template-android-instant/frameworks/runtime-src/proj.android-studio/game/: AndroidManifest.xml  build.gradle
templates/js-template-default/frameworks/runtime-src/Classes/: NativeConfig.h
templates/js-template-default/frameworks/runtime-src/proj.android-studio/: build.gradle  gradle.properties
templates/js-template-default/frameworks/runtime-src/proj.android-studio/app/: build.gradle
templates/js-template-default/frameworks/runtime-src/proj.android-studio/game/: build.gradle
templates/js-template-link/frameworks/runtime-src/Classes/: NativeConfig.h
templates/js-template-link/frameworks/runtime-src/proj.android-studio/app/: build.gradle
templates/js-template-link/frameworks/runtime-src/proj.android-studio/game/: build.gradle
templates/mac/: CMakeLists.txt
templates/template-link/: cocos-project-template.json
templates/template-link/common/: CMakeLists.txt
tools/simulator/frameworks/runtime-src/: CMakeLists.txt
tools/simulator/frameworks/runtime-src/Classes/ide-support/: RuntimeJsImpl.cpp
tools/travis-scripts/: run-script.sh
